--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-transition-group": "^4.4.2",
+    "react-yandex-maps": "^4.6.0",
     "redux": "^4.2.0",
     "redux-saga": "^1.1.3",
     "reselect": "^4.1.6",
